--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,6 @@ php:
 env:
   global:
     - ES_VERSION="7.1.1"
-  matrix:
-    - SCOUT_ELASTICSEARCH_INDEXER_CLASS="\Rennokki\ElasticScout\Indexers\SimpleIndexer"
-    - SCOUT_ELASTICSEARCH_INDEXER_CLASS="\Rennokki\ElasticScout\Indexers\MultipleIndexer"
 
 cache:
   directories:
@@ -27,7 +24,10 @@ before_script:
   - until curl --silent -XGET --fail http://127.0.0.1:9200; do printf '.'; sleep 1; done
 
 script:
-  - phpunit --coverage-text --coverage-clover=coverage.xml
+  - export SCOUT_ELASTICSEARCH_INDEXER_CLASS="\Rennokki\ElasticScout\Indexers\SimpleIndexer"
+  - phpunit --coverage-text --coverage-clover=coverage_simple.xml
+  - export SCOUT_ELASTICSEARCH_INDEXER_CLASS="\Rennokki\ElasticScout\Indexers\MultipleIndexer"
+  - phpunit --coverage-text --coverage-clover=coverage_multiple.xml
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -f "*.xml"
