--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": "^7.2",
         "elasticsearch/elasticsearch": ">=7.1",
         "laravel/scout": "^7.2",
-        "aws/aws-sdk-php": "^3.132"
+        "aws/aws-sdk-php": "^3.132",
+        "rennokki/laravel-eloquent-query-cache": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
