--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.2",
         "elasticsearch/elasticsearch": ">=7.1",
-        "laravel/scout": "^7.2|^8.0",
+        "laravel/scout": "^8.0",
         "aws/aws-sdk-php": "^3.132",
-        "rennokki/laravel-eloquent-query-cache": "^1.2|^1.3"
+        "rennokki/laravel-eloquent-query-cache": "^1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "orchestra/testbench": "~4.2.0",
-        "orchestra/database": "~4.2.0"
+        "orchestra/testbench": "^5.0",
+        "orchestra/database": "^5.0"
     },
     "autoload": {
         "psr-4": {
