--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
     ],
     "require": {
         "elasticsearch/elasticsearch": ">=7.1",
-        "laravel/scout": "^8.0",
+        "laravel/scout": "^8.3",
         "aws/aws-sdk-php": "^3.132",
         "rennokki/laravel-eloquent-query-cache": "^1.3|^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "orchestra/database": "^5.0"
+        "laravel/legacy-factories": "^1.0",
+        "orchestra/testbench": "^6.0",
+        "orchestra/database": "^6.0"
     },
     "autoload": {
         "psr-4": {
