--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         "rennokki/laravel-eloquent-query-cache": "^1.3|^2.0"
     },
     "require-dev": {
-        "laravel/legacy-factories": "^1.0",
-        "orchestra/testbench": "^6.0",
-        "orchestra/database": "^6.0"
+        "laravel/legacy-factories": "^1.0.4",
+        "orchestra/database": "^4.0|^5.0|^6.0",
+        "orchestra/testbench": "^4.0|^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
