--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,10 @@
             "Rennokki\\ElasticScout\\Tests\\": "tests/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
     "extra": {
         "laravel": {
             "providers": [
