--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "elasticsearch/elasticsearch": ">=7.4",
         "laravel/scout": "^8.3",
         "aws/aws-sdk-php": "^3.132",
-        "rennokki/laravel-eloquent-query-cache": "^1.3|^2.0"
+        "rennokki/laravel-eloquent-query-cache": "^2.0"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
