--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,22 @@ jobs:
 
     strategy:
       matrix:
-        php: ['7.2', '7.3', '7.4']
-        es: ['7.4.2', '7.5.2', '7.6.2', '7.7.1', '7.8.1', '7.9.1']
-        laravel: ['6.*', '7.*', '8.*']
+        php:
+          - '7.2'
+          - '7.3'
+          - '7.4'
+        es:
+          - '7.4.2'
+          - '7.5.2'
+          - '7.6.2'
+          - '7.7.1'
+          - '7.8.1'
+          - '7.9.3'
+          - '7.10.0'
+        laravel:
+          - '6.*'
+          - '7.*'
+          - '8.*'
         include:
           - laravel: '6.*'
             testbench: '4.*'
@@ -36,8 +49,10 @@ jobs:
             es-php: '7.7.*'
           - es: '7.8.1'
             es-php: '7.8.*'
-          - es: '7.9.1'
+          - es: '7.9.3'
             es-php: '7.9.*'
+          - es: '7.10.0'
+            es-php: '7.10.*'
 
     name: PHP ${{ matrix.php }} - ES ${{ matrix.es }} Laravel ${{ matrix.laravel }}
 
