--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require-dev": {
         "laravel/legacy-factories": "^1.1",
         "mockery/mockery": "^1.4",
-        "orchestra/database": "^4.0|^5.0|^6.0",
-        "orchestra/testbench": "^4.0|^5.0|^6.0"
+        "orchestra/database": "^5.0|^6.0",
+        "orchestra/testbench": "^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
